--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "material-ui": "^0.19.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {},
